--- a/style.css/style.css
+++ b/style.css/style.css
@@ -13,7 +13,9 @@
 .navbar,
 .nav-logo,
 .navbar > ul,
-.banner {
+.banner,
+.curriculum-section,
+.card-container {
   display: flex;
 }
 
@@ -42,6 +44,9 @@
 }
 .color-4 {
   color: #5d58ef;
+}
+.color-5 {
+  color: #8700ff;
 }
 
 /* Header Section */
@@ -99,6 +104,71 @@ nav > ul > li > a {
   margin: 0%;
 }
 
+/* Main Section */
+/* Standard-Curriculum Section */
+main {
+  max-width: 1440px;
+  margin: auto;
+  background-image: url("/assets/bg.png");
+}
+
+.curriculum-section {
+  padding: 60px 0px;
+  text-align: center;
+}
+
+.curriculum-section > div > h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  margin: 0%;
+}
+.card-container {
+  height: 460px;
+  padding: 60px 0px;
+  gap: 30px;
+}
+.cards {
+  padding: 50px 0px;
+  text-align: center;
+  border-radius: 19px;
+}
+
+.cards > h2 {
+  margin: 0%;
+  padding: 32px 0px;
+}
+.cards > p {
+  margin: 0%;
+  margin-bottom: 32px;
+}
+.card-1 {
+  border: 1px solid #def5ff;
+  background-image: linear-gradient(180deg, #def5ff, #ffffff);
+}
+.card-2 {
+  border: 1px solid #fff4dc;
+  background-image: linear-gradient(180deg, #fff4dc, #ffffff);
+}
+.card-3 {
+  border: 1px solid #f2e8ff;
+  background-image: linear-gradient(180deg, #f2e8ff, #ffffff);
+}
+.card-btn {
+  font-size: 0.8rem;
+  font-weight: 550;
+  border: none;
+  background-color: white;
+}
+/* Arrow Button */
+.btn-arrow {
+  border-radius: 30px;
+  padding: 17px 25px;
+  font-size: 1.5rem;
+  background-color: #fea301;
+  color: white;
+  border: none;
+}
+
 /* Responsive media query */
 @media screen and (max-width: 576px) {
   .navbar-btn,
@@ -106,8 +176,38 @@ nav > ul > li > a {
   .navbar > div > h1 {
     display: none;
   }
+  /* Navbar Section */
   .navbar {
     border: 1px solid #fea301;
     padding: 16px 12px;
+  }
+  /* Banner Section */
+  .banner {
+    flex-direction: column-reverse;
+    padding: 20px 0px;
+    gap: 20px;
+  }
+  .banner > div > img {
+    width: 100%;
+  }
+  .banner-description {
+    text-align: center;
+  }
+  .banner > div > h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 0%;
+  }
+  .banner > div > p {
+    font-size: 0.9rem;
+  }
+  .btn-primary {
+    background-color: #111111;
+    color: white;
+    font-weight: 400;
+    font-size: 1rem;
+    padding: 10px 24px;
+    border-radius: 8px;
+    border: none;
   }
 }
